# monicar2

./: README.md
arduino/: arduinoNano.rules  create_udev_rules.sh  create_udev_rules_esp32snode.sh  create_udev_rules_rplidar.sh  delete_udev_rules.sh  delete_udev_rules_esp32snode.sh  encRos32.ino  encoder32Test.ino  encoderTest.ino  esp32.4G.patch  esp32sNodemcu.rules  ledRos32.ino  motorController32Test.ino  motorControllerTest.ino  motorEncLedMpuRos32.ino  motorEncLedRos.ino  motorEncLedRos32.ino  motorEncRos32.ino  rplidar.4G.patch  rplidar.rules
arduino/MPU6050_DMP6/: MPU6050_DMP6.ino
monicar2/: CMakeLists.txt  package.xml
monicar2_bringup/: CMakeLists.txt  package.xml  setup.cfg  setup.py
monicar2_cartographer/: CMakeLists.txt  package.xml
monicar2_description/: CMakeLists.txt  package.xml
monicar2_description/launch/: description.launch.py  description_rviz.launch.py  monicar2_description.launch.py  monicar2_description_rviz.launch.py  monicar2_state_publisher.launch.py  state_publisher.launch.py
monicar2_description/meshes/: leftwheel.stl  lidar.stl  mpu6050.stl  rightwheel.stl
monicar2_description/rviz/: model.rviz
monicar2_description/urdf/: robot.urdf
monicar2_imuconverter/: CMakeLists.txt  package.xml  setup.cfg  setup.py
monicar2_imuconverter/launch/: mpu6050.launch.py  mpu6050_imu.launch.py  mpu6050_imu_rviz.launch.py
monicar2_imuconverter/monicar2_imuconverter/script/: imuconverter.py  monicar2_imuconverter.py
monicar2_imuconverter/param/: imu.yaml
monicar2_imuconverter/rviz/: mpu6050_imu.rviz
monicar2_interfaces/: CMakeLists.txt  package.xml
monicar2_localization/: CMakeLists.txt  package.xml  setup.cfg  setup.py
monicar2_localization/launch/: ekfPose.launch.py  ekfPose4Navi.launch.py  ekfPose4map.launch.py  ekfPose4mapDest.launch.py  ekfPose4mapJoy.launch.py  ekfPose_rviz.launch.py  ekfPose_simple.launch.py  ekfnode.launch.py  initPoseRviz2.launch.py  odomPub.launch.py  odomPubInit.launch.py  odomPubInit0.launch.py  odomPubInit1.launch.py  odomPub_rviz.launch.py  odomPublisher.launch.py  pose4Navi.launch.py  pose4NaviDest.launch.py  pose4map.launch.py  pose4mapJoy.launch.py  pose4mapJoyDest.launch.py  rviz2ClickTo2d.launch.py
monicar2_localization/monicar2_localization/script/: move.py  odomPublisher.py  rotate.py  rviz2ClickTo2d.py  rviz2ClickTo2dTimer.py
monicar2_localization/param/: ekf.yaml  initPose.yaml  initPose0.yaml  initPose1.yaml  odomPub.yaml  robot.yaml
monicar2_localization/rviz/: ekfPose.rviz  odomcheck.rviz
monicar2_navigation2/: CMakeLists.txt  package.xml  setup.cfg  setup.py
monicar2_navigation2/launch/: navigation2.launch.py  navigation2Dest.launch.py  navigation2Dest_rviz.launch.py  navigation2_rviz.launch.py  navigation2_simple.launch.py  navigation2_simple.rviz.launch.py  slamtoolbox_rviz.launch.py
monicar2_navigation2/map/: maker1.pgm  maker1.yaml  mymap.pgm  mymap.yaml
monicar2_navigation2/param/: monicar2.yaml
monicar2_navigation2/rviz/: navigation2.rviz  slamtoolbox.rviz
monicar2_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
script/: monicar2.178rpm.curvefit.py  monicar2.60rpm.curvefit.py  selDomain.sh  selLidar.sh  selMotor.sh
(+40 files in other folders)
