<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monicar2_description</name>
  <version>0.0.1</version>
  <description>
    3D models of the monicar2 for simulation and visualization
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/bishopearson/monicar2</url>
  <maintainer email="bishopearson@gmail.com">Bishop Pearson</maintainer>
  <author email="bishopearson@gmail.com">Bishop Pearson</author>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>urdf</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
