<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monicar2_imuconverter</name>
  <version>1.0.0</version>
  <description>quaterion to IMU converter</description>

  <license>Apache 2.0</license>
  <url type="repository">https://github.com/orocapangyo/monicar2</url>
  <maintainer email="zeta0707@gmail.com">ChangWhan Lee</maintainer>
  <author email="zeta0707@gmail.com">ChangWhan Lee</author>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
