<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monicar2_localization</name>
  <version>0.9.1</version>
  <description>Localization package</description>
  <maintainer email="zeta0707@gmail.com">zeta7</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>tf2_py</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>

</package>
