<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>monicar2_navigation2</name>
  <version>1.0.0</version>
  <description>
    ROS2 launch scripts for navigation2
  </description>
  <license>Apache 2.0</license>
  <url type="repository">https://github.com/orocapangyo/monicar2</url>
  <maintainer email="zeta0707@gmail.com">ChangWhan Lee</maintainer>
  <author email="zeta0707@gmail.com">ChangWhan Lee</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
